--- a/css/project.css
+++ b/css/project.css
@@ -168,7 +168,7 @@ span {
 
 @media (max-width: 1000px) {
   .slides-container {
-    width: 90vw;
+    width: 100%;
     height: 25vh;
     display: flex;
     white-space: nowrap; /* aggiunta */
@@ -177,9 +177,14 @@ span {
     justify-content: space-around;
   }
     .project-content p {
-    width: 90vw;
-    margin: 3.5rem auto;
+    width: 100%;
+    margin: 3.5rem 0rem 0 1rem;
     margin-bottom:-1.5rem;
     } 
+
+    .carousel-buttons {
+      display: none;
+    }
+
   }
 
